# rust-chess

./: .gitignore  .travis.yml  Cargo.toml  README.md
benches/: benchmarks.rs
cmd/: chess.rs
src/: attack_masks.rs  bitboard.rs  board.rs  builder.rs  generate.rs  lib.rs  moves.rs  pregen.rs
src/masks/: a1h8.rs  a8h1.rs  diagonals.rs  files.rs  mod.rs  pawns.rs  ranks.rs  sliding.rs  special.rs
tests/: test_move_gen_pawns.rs
tools/: gen_board_consts.rs
