[package]
name = "chess"
version = "0.1.0"
authors = ["Giles Hutton <hutton.giles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.5"
lazy_static = "1.4.0"
itertools = "0.9.0"

[[bin]]
name = "gen-board-consts"
path = "tools/gen_board_consts.rs"

[[bin]]
name = "chess"
path = "cmd/chess.rs"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "benchmarks"
harness = false
